Add cache control headers and bump version to 1.0.9 to force complete cache refresh

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,6 +4,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+
+  <!-- Cache Control: Force browsers to always fetch latest versions -->
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <title>Записи - Личный кабинет</title>
 
   <!-- Telegram Web App SDK -->
@@ -20,18 +26,18 @@
   </script>
 
   <!-- App Styles -->
-  <link rel="stylesheet" href="src/app/styles/variables.css?v=1.0.4">
-  <link rel="stylesheet" href="src/app/styles/global.css?v=1.0.4">
-  <link rel="stylesheet" href="src/app/styles/index.css?v=1.0.4">
+  <link rel="stylesheet" href="src/app/styles/variables.css?v=1.0.9">
+  <link rel="stylesheet" href="src/app/styles/global.css?v=1.0.9">
+  <link rel="stylesheet" href="src/app/styles/index.css?v=1.0.9">
 
   <!-- Loader Styles -->
-  <link rel="stylesheet" href="src/shared/ui/loader/loader.css?v=1.0.0">
+  <link rel="stylesheet" href="src/shared/ui/loader/loader.css?v=1.0.9">
 
   <!-- Widget Styles -->
-  <link rel="stylesheet" href="src/widgets/footer-navigation/ui/footer.css?v=1.0.4">
+  <link rel="stylesheet" href="src/widgets/footer/footer.css?v=1.0.9">
 
   <!-- Entity Styles -->
-  <link rel="stylesheet" href="src/entities/record/ui/record-card.css?v=1.0.4">
+  <link rel="stylesheet" href="src/entities/record/ui/record-card.css?v=1.0.9">
 </head>
 
 <body>
@@ -67,7 +73,7 @@
         </svg>
         <span>Записи</span>
       </button>
-      <button class="footer-btn" data-tab="settings" data-href="src/pages/settings/index.html?v=1.0.4">
+      <button class="footer-btn" data-tab="settings" data-href="src/pages/settings/index.html?v=1.0.9">
         <svg viewBox="0 0 24 24">
           <path
             d="M10.325 4.317c.426-1.756 2.924-1.756 3.35 0a1.724 1.724 0 002.573 1.066c1.543-.94 3.31.826 2.37 2.37a1.724 1.724 0 001.065 2.572c1.756.426 1.756 2.924 0 3.35a1.724 1.724 0 00-1.066 2.573c.94 1.543-.826 3.31-2.37 2.37a1.724 1.724 0 00-2.572 1.065c-.426 1.756-2.924 1.756-3.35 0a1.724 1.724 0 00-2.573-1.066c-1.543.94-3.31-.826-2.37-2.37a1.724 1.724 0 00-1.065-2.572c-1.756-.426-1.756-2.924 0-3.35a1.724 1.724 0 001.066-2.573c-.94-1.543.826-3.31 2.37-2.37.996.608 2.296.07 2.572-1.065z" />
@@ -79,24 +85,24 @@
   </footer>
 
   <!-- App Scripts -->
-  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.8"></script>
-  <script type="module" src="src/app/config/theme.js?v=1.0.8"></script>
+  <script type="module" src="src/app/providers/telegram/init.js?v=1.0.9"></script>
+  <script type="module" src="src/app/config/theme.js?v=1.0.9"></script>
 
   <!-- Shared Libraries (with cache busting) -->
-  <script type="module" src="src/shared/config/api.js?v=1.0.8"></script>
-  <script type="module" src="src/shared/lib/jwt-auth.js?v=1.0.8"></script>
-  <script type="module" src="src/shared/lib/api-client.js?v=1.0.8"></script>
-  <script type="module" src="src/shared/lib/profile-api.js?v=1.0.8"></script>
-  <script type="module" src="src/shared/lib/telegram.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/config/api.js?v=1.0.9"></script>
+  <script type="module" src="src/shared/lib/jwt-auth.js?v=1.0.9"></script>
+  <script type="module" src="src/shared/lib/api-client.js?v=1.0.9"></script>
+  <script type="module" src="src/shared/lib/profile-api.js?v=1.0.9"></script>
+  <script type="module" src="src/shared/lib/telegram.js?v=1.0.9"></script>
 
   <!-- Loader Script -->
-  <script type="module" src="src/shared/ui/loader/loader.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/ui/loader/loader.js?v=1.0.9"></script>
 
   <!-- Navigation Script -->
-  <script type="module" src="src/shared/lib/navigation.js?v=1.0.8"></script>
+  <script type="module" src="src/shared/lib/navigation.js?v=1.0.9"></script>
 
   <!-- Page Scripts -->
-  <script type="module" src="src/pages/records/records.js?v=1.0.8"></script>
+  <script type="module" src="src/pages/records/records.js?v=1.0.9"></script>
 </body>
 
 </html>
