Fix frontend cache issues, fix undefined endpoint, update to v3.0.0

--- a/frontend/src/pages/services/index.html
+++ b/frontend/src/pages/services/index.html
@@ -146,6 +146,12 @@
   <script type="module" src="../../app/providers/telegram/init.js?v=3.0.0"></script>
   <script type="module" src="../../app/config/theme.js?v=3.0.0"></script>
 
+  <!-- Shared Libraries (Force Load New Versions) -->
+  <script type="module" src="../../shared/config/api.js?v=3.0.0"></script>
+  <script type="module" src="../../shared/lib/jwt-auth.js?v=3.0.0"></script>
+  <script type="module" src="../../shared/lib/api-client.js?v=3.0.0"></script>
+  <script type="module" src="../../shared/lib/services-api.js?v=3.0.0"></script>
+
   <!-- Loader Script -->
   <script type="module" src="../../shared/ui/loader/loader.js?v=3.0.0"></script>
   </script>
