Fix styling issue on records page: use correct class records-filters

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,7 +45,7 @@
   <main id="app">
     <!-- Records List -->
     <div class="records-container">
-      <div class="filter-buttons">
+      <div class="records-filters">
         <button class="filter-btn active" data-status="all">Все</button>
         <button class="filter-btn" data-status="pending">Ожидают</button>
         <button class="filter-btn" data-status="confirmed">Подтверждены</button>
