Switch auth storage from localStorage to Cookies, update to v3.0.2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -84,20 +84,21 @@
   <script type="module" src="src/app/config/theme.js?v=3.0.0"></script>
 
   <!-- Shared Libraries (with cache busting) -->
-  <script type="module" src="src/shared/config/api.js?v=3.0.0"></script>
-  <script type="module" src="src/shared/lib/jwt-auth.js?v=3.0.0"></script>
-  <script type="module" src="src/shared/lib/api-client.js?v=3.0.0"></script>
-  <script type="module" src="src/shared/lib/profile-api.js?v=3.0.0"></script>
-  <script type="module" src="src/shared/lib/telegram.js?v=3.0.0"></script>
+  <script type="module" src="src/shared/config/api.js?v=3.0.2"></script>
+  <script type="module" src="src/shared/lib/cookies.js?v=3.0.2"></script>
+  <script type="module" src="src/shared/lib/jwt-auth.js?v=3.0.2"></script>
+  <script type="module" src="src/shared/lib/api-client.js?v=3.0.2"></script>
+  <script type="module" src="src/shared/lib/profile-api.js?v=3.0.2"></script>
+  <script type="module" src="src/shared/lib/telegram.js?v=3.0.2"></script>
 
   <!-- Loader Script -->
-  <script type="module" src="src/shared/ui/loader/loader.js?v=3.0.0"></script>
+  <script type="module" src="src/shared/ui/loader/loader.js?v=3.0.2"></script>
 
   <!-- Navigation Script -->
-  <script type="module" src="src/shared/lib/navigation.js?v=3.0.0"></script>
+  <script type="module" src="src/shared/lib/navigation.js?v=3.0.2"></script>
 
   <!-- Page Scripts -->
-  <script type="module" src="src/pages/records/records.js?v=3.0.0"></script>
+  <script type="module" src="src/pages/records/records.js?v=3.0.2"></script>
 </body>
 
 </html>
