--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,21 @@
   <!-- Telegram Web App SDK -->
   <script src="https://telegram.org/js/telegram-web-app.js"></script>
 
+  <script>
+    // Initialize Telegram WebApp immediately after SDK loads
+    if (window.Telegram?.WebApp) {
+      window.Telegram.WebApp.ready();
+      console.log('✅ Telegram WebApp initialized');
+      console.log('📋 WebApp initData status:', {
+        hasInitData: !!window.Telegram.WebApp.initData,
+        initDataLength: window.Telegram.WebApp.initData?.length || 0,
+        initDataPreview: window.Telegram.WebApp.initData?.substring(0, 50) || 'NONE'
+      });
+    } else {
+      console.warn('⚠️ Telegram WebApp SDK not available');
+    }
+  </script>
+
   <!-- Eruda Mobile Console for Debugging (only in development) -->
   <script src="https://cdn.jsdelivr.net/npm/eruda"></script>
   <script>
